src/tests/InvalidTests/TestArray1.agl
c : Array<Array<Point>> = [[(1,2), (3,4)], [(1,2), (3,4)]]; # correto. Type: Array<Array<Point>> ; Assignment Type: Array<Array<Point>>

c = ["a","b","c","d","e"]; # dรก erro. Type:  Array<Array<Point>> ; Assignment Type: Array<String>